--- a/ui/html/show.page.tmpl
+++ b/ui/html/show.page.tmpl
@@ -1,9 +1,9 @@
 {{template "base" .}} 
 
-{{with.Snippet}}
-  {{define "title"}}Snippet #{{.ID}}{{end}}
+{{define "title"}}Snippet #{{.Snippet.ID}}{{end}}
 
-  {{define "body"}} 
+{{define "body"}} 
+  {{with .Snippet}}
   <div class = 'snippet'>
     <div class = 'metadata'>
       <strong>{{.Title}}</strong> 
