--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -16,6 +16,7 @@
           <td><a href='/snippet/show/{{.ID}}'>{{.Title}}<a/></td>
           <td>{{humanDate .Created}}</td>
           <td>#{{.ID}}</td>
+          <td><a href='/snippet/delete/{{.ID}}'>Delete<a/></td>
         </tr>
       {{end}}
     </table>
